--- a/incomingTalent.html
+++ b/incomingTalent.html
@@ -48,6 +48,7 @@
 <body id="page-top">
 
     <!-- Navigation -->
+      <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <div class="navbar-brand js-scroll-trigger" href="index.html">
@@ -64,32 +65,32 @@
                 <ul class="navbar-nav ml-auto">
 
                     <li class="collapse-trigger">
-                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration1" role="button" aria-expanded="false" aria-controls="colaboration">
-                            青年參與計畫 <i class="fa fa-caret-down"></i>&nbsp;&nbsp;&nbsp;</a>
+                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration1" role="button" aria-expanded="false" aria-controls="colaboration">青年參與計畫 <i class="fa fa-caret-down"></i>&nbsp;&nbsp;&nbsp;</a>
                     </li>
 
                     <div class="collapse" id="colaboration1">
                         <div class="collaspe-body">
-                            <a href="OutGoing%20Volunnter.html" class="collapse-font"> Global Volunteer 海外成長</a><br>
-                            <a href="Outgoing%20Talent.html" class="collapse-font"> Global Talent 海外實習</a><br>
-                            <a href="Outgoing%20Entrepreneur.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
+                            <a href="outGoingVolunnter.html" S class="collapse-font"> Global Volunteer 海外成長</a><br>
+                            <a href="outgoingTalent.html" class="collapse-font"> Global Talent 海外實習</a><br>
+                            <a href="outgoingEntrepreneur.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
 
                         </div>
                     </div>
 
                     <li class="collapse-trigger">
-                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration" role="button" aria-expanded="false" aria-controls="colaboration">
-                            組織合作機會 <i class="fa fa-caret-down"></i></a>
+                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration" role="button" aria-expanded="false" aria-controls="colaboration">組織合作機會 <i class="fa fa-caret-down"></i></a>
                     </li>
 
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
-                            <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
+
+                            <a href="incomingVolunteer.html" class="collapse-font">全球青年在地發展</a><br>
                             <a href="incomingTalent.html" class="collapse-font">全球人才實習</a>
+
                         </div>
                     </div>
                     <li class="nav-item dropdown">
-                        <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                        <a class="nav-link js-scroll-trigger" href="%E5%8A%A0%E5%85%A5%E6%88%91%E5%80%91.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -452,22 +453,21 @@
 
             <img src="img/aiesec%20logo.png" height="30%" width="30%">
 
-            <p class="footer-links microfont">
+ <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
                 ·
                 <a href="index.html">AIESEC</a>
                 ·
-                <a href="OutGoing%20Volunnter.html">海外成長</a>
+                <a href="outGoingVolunnter.html">海外成長</a>
                 ·
-                <a href="Outgoing%20Talent.html">海外實習</a>
+                <a href="outgoingTalent.html">海外實習</a>
                 ·
-                <a href="Outgoing%20Entrepreneur.html">海外青創</a> 
+                <a href="outgoingEntrepreneur.html">海外青創</a> 
                 ·
-                <a href="Incoming%20Volunteer.html">全球青年在地發展</a>
+                <a href="incomingVolunteer.html">全球青年在地發展</a>
                 ·
                 <a href="incomingTalent.html">全球人才實習</a>
             </p>
-
 
             <p class="footer-company-name">AIESEC in Taiwan &copy; 2019</p>
         </div>
