--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
                     <div class="collapse" id="colaboration1">
                         <div class="collaspe-body">
-                            <a href="OutGoing%20Volunnter.html" S class="collapse-font"> Global Volunteer 海外成長</a><br>
-                            <a href="Outgoing%20Talent.html" class="collapse-font"> Global Talent 海外實習</a><br>
-                            <a href="Outgoing%20Entrepreneur.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
+                            <a href="outGoingVolunnter.html" S class="collapse-font"> Global Volunteer 海外成長</a><br>
+                            <a href="outgoingTalent.html" class="collapse-font"> Global Talent 海外實習</a><br>
+                            <a href="outgoingEntrepreneur.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
 
                         </div>
                     </div>
@@ -84,13 +84,13 @@
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
 
-                            <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
+                            <a href="incomingVolunteer.html" class="collapse-font">全球青年在地發展</a><br>
                             <a href="incomingTalent.html" class="collapse-font">全球人才實習</a>
 
                         </div>
                     </div>
                     <li class="nav-item dropdown">
-                        <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                        <a class="nav-link js-scroll-trigger" href="%E5%8A%A0%E5%85%A5%E6%88%91%E5%80%91.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -198,7 +198,7 @@
             <div class="row">
 
                 <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn mt-5">
-                    <a href="OutGoing%20Volunnter.html" style="text-decoration:none;">
+                    <a href="outGoingVolunnter.html" style="text-decoration:none;">
                         <div class="card h-100 card-margin mt-5">
                             <img class="card-img-top" src="img/students-gv.jpg" alt="">
                             <div class="card-body">
@@ -220,7 +220,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn mt-5">
-                    <a href="Outgoing%20Talent.html" style="text-decoration:none;">
+                    <a href="outgoingTalent.html" style="text-decoration:none;">
                         <div class="card h-100 card-margin mt-5">
                             <img class="card-img-top" src="img/students-gt.jpg" alt="">
                             <div class="card-body">
@@ -242,7 +242,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6  wow zoomIn mt-5">
-                    <a href="Outgoing%20Entrepreneur.html" style="text-decoration:none;">
+                    <a href="outgoingEntrepreneur.html" style="text-decoration:none;">
                         <div class="card h-100 card-margin mt-5">
                             <img class="card-img-top" src="img/students-ge.jpg" alt="">
                             <div class="card-body">
@@ -431,13 +431,13 @@
                 ·
                 <a href="index.html">AIESEC</a>
                 ·
-                <a href="OutGoing%20Volunnter.html">海外成長</a>
+                <a href="outGoingVolunnter.html">海外成長</a>
                 ·
-                <a href="Outgoing%20Talent.html">海外實習</a>
+                <a href="outgoingTalent.html">海外實習</a>
                 ·
-                <a href="Outgoing%20Entrepreneur.html">海外青創</a> 
+                <a href="outgoingEntrepreneur.html">海外青創</a> 
                 ·
-                <a href="Incoming%20Volunteer.html">全球青年在地發展</a>
+                <a href="incomingVolunteer.html">全球青年在地發展</a>
                 ·
                 <a href="incomingTalent.html">全球人才實習</a>
             </p>
