--- a/ogt_regist_form.html
+++ b/ogt_regist_form.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>秋季徵才</title>
+    <title>申請海外實習</title>
 
     <!--    css for this page-->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
