--- a/oge_regist_form.html
+++ b/oge_regist_form.html
@@ -357,7 +357,7 @@
                     </tr>
                     <tr>
                         <td colspan="2" align="center">
-                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外青創報名表">
+                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外青創報名表" src="thanksPage.html">
                         </td>
                     </tr>
 
