--- a/ogt_info_session_form.html
+++ b/ogt_info_session_form.html
@@ -296,7 +296,7 @@
 
                 </table>
                 <div class="container">
-                    <input type="submit" id="submit_button" name="submit" clicked="false" class="send btn btn-primary btn-recruit center mt-5" value="報名說明會">
+                    <input type="submit" id="submit_button" name="submit" clicked="false" class="send btn btn-primary btn-recruit center mt-5" value="報名說明會" src="thanksPage.html">
                 </div>
                 
                     
