--- a/recruitment_regist_form.html
+++ b/recruitment_regist_form.html
@@ -314,7 +314,7 @@
                     <tr>
                         <td colspan="2">
                             <div class="text-center">
-                                <input name="submit" type="submit" value="繳交報名表" class="btn btn-primary">
+                                <input name="submit" type="submit" value="繳交報名表" class="btn btn-primary" src="thanksPage.html">
                             </div>
                         </td>
 
