--- a/ogt_regist_form.html
+++ b/ogt_regist_form.html
@@ -326,7 +326,7 @@
 
                     <tr>
                         <td colspan="2" align="center">
-                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外實習報名表">
+                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外實習報名表" src="thanksPage.html">
                         </td>
                     </tr>
 
