--- a/ogv_regist_form.html
+++ b/ogv_regist_form.html
@@ -313,7 +313,7 @@
 
                     <tr>
                         <td colspan="2" align="center">
-                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外成長報名表">
+                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外成長報名表" src="thanksPage.html">
                         </td>
                     </tr>
 
