--- a/ogt_regist_form.html
+++ b/ogt_regist_form.html
@@ -326,13 +326,15 @@
 
                     <tr>
                         <td colspan="2" align="center">
-                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外實習報名表" src="thanksPage.html">
+                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外實習報名表">
                         </td>
                     </tr>
 
 
 
                 </table>
+                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/thanksPage.html" />
+
                 <input name="rating" type="hidden" value="Warm">
                 <input name="00N70000002UFkn" type="hidden" value="OGX GIP">
                 <input name="00N70000002ULec" type="hidden" value="1">
@@ -342,6 +344,4 @@
             </form>
         </div>
     </div>
-</body>
-
-</html>
+</body></html>
