--- a/ogv_regist_form.html
+++ b/ogv_regist_form.html
@@ -322,7 +322,8 @@
                 </table>
 
                 <!-- hidden values -->
-<!--                <input type="hidden" name="00N70000002UFkn" value="OGX GCDP">-->
+<!--                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/thanksPage.html" />-->
+
                 <input type="hidden" name="rating" value="Warm">
                 <input type="hidden" name="00N70000002UFkn" value="OGX GCDP">
                 <input type="hidden" name="00N70000002ULec" value="1">
@@ -330,6 +331,4 @@
             </form>
         </div>
     </div>
-</body>
-
-</html>
+</body></html>
