--- a/outgoingEntrepreneur.html
+++ b/outgoingEntrepreneur.html
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <li class="nav-item dropdown">
-                        <a class="nav-link js-scroll-trigger" href="%E5%8A%A0%E5%85%A5%E6%88%91%E5%80%91.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                        <a class="nav-link js-scroll-trigger" href="%E5%8A%A0%E5%85%A5%E6%88%91%E5%80%91.html" sytle="color=white">加入我們·秋季徵才</a>
                     </li>
 
                     <li class="nav-item dropdown">
