--- a/recruitment_regist_form.html
+++ b/recruitment_regist_form.html
@@ -36,8 +36,8 @@
                     <!--       英文全名、性別-->
                     <tr>
                         <td> <input id="00N70000002UKfP" maxlength="255" name="00N70000002UKfP" required="" size="20" type="text" placeholder="Winnie Zheng" class="form-control"></td>
-                        <td> 
-                              <select id="00N70000002U9LK" name="00N70000002U9LK" title="Gender" class="form-control">
+                        <td>
+                            <select id="00N70000002U9LK" name="00N70000002U9LK" title="Gender" class="form-control">
                                 <option value="Male">Male</option>
                                 <option value="Female">Female</option>
                             </select></td>
@@ -314,7 +314,7 @@
                     <tr>
                         <td colspan="2">
                             <div class="text-center">
-                                <input name="submit" type="submit" value="繳交報名表" class="btn btn-primary" src="thanksPage.html">
+                                <input name="submit" type="submit" value="繳交報名表" class="btn btn-primary">
                             </div>
                         </td>
 
@@ -322,7 +322,8 @@
 
 
                     <input name="oid" type="hidden" value="00D70000000IhvY" />
-                    <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/%E5%8A%A0%E5%85%A5%E6%88%91%E5%80%91/%E5%8A%A0%E5%85%A5%E6%88%91%E5%80%91-%E5%AE%8C%E6%88%90%E5%A0%B1%E5%90%8D/" />
+                    <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/thanksPage.html" />
+
                     <input name="rating" type="hidden" value="Warm" />
                     <input name="00N70000002UFkn" type="hidden" value="TMP" />
                     <input name="00N70000002ULec" type="hidden" value="1" />
@@ -340,7 +341,7 @@
 
 
 
-<!--
+    <!--
     <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
         <input type=hidden name="oid" value="00D70000000IhvY">
@@ -646,8 +647,5 @@
             });
 
         });
-
     </script>
-</body>
-
-</html>
+</body></html>
