--- a/thanksPage.html
+++ b/thanksPage.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>謝謝你的報名</title>
+    <title>謝謝您的報名</title>
 
     <!--    css for this page-->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -14,11 +14,11 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/icon2.png" />
 </head>
 
-<body>
+<body style="background-color: #f7f7f7">
 
-    <div class="jumbotron text-center">
-        <h1 class="display-3">Thank You!</h1>
-        <p class="lead"><strong>請檢查您的信箱</strong> 獲得更多資訊及完成接下來的步驟。</p>
+    <div class="jumbotron text-center" style="max-height: 100%">
+        <h2 class="">Thank You! 謝謝您的報名！</h2>
+        <p class="lead"><strong>請檢查您所填寫的信箱</strong> 獲得更多資訊及完成接下來的步驟。</p>
         <hr>
         <p>
             任何疑問？ <a href="https://mail.google.com/mail/?view=cm&fs=1&to=taiwan@aiesec.net" target="_blank">聯絡我們</a>
