--- a/加入我們.html
+++ b/加入我們.html
@@ -83,9 +83,9 @@
 
                     <div class="collapse" id="colaboration1">
                         <div class="collaspe-body">
-                            <a href="OutGoing%20Volunnter.html" class="collapse-font"> Global Volunteer 海外成長</a><br>
-                            <a href="Outgoing%20Talent.html" class="collapse-font"> Global Talent 海外實習</a><br>
-                            <a href="Outgoing%20Entrepreneur.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
+                            <a href="outGoingVolunnter.html" class="collapse-font"> Global Volunteer 海外成長</a><br>
+                            <a href="outgoingTalent.html" class="collapse-font"> Global Talent 海外實習</a><br>
+                            <a href="outgoingEntrepreneur.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
 
                         </div>
                     </div>
@@ -97,11 +97,11 @@
 
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
-                            <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
-                            <a href="incomingTalent.html" class="collapse-font">全球青年在地發展</a> </div>
+                            <a href="incomingVolunteer.html" class="collapse-font">全球青年在地發展</a><br>
+                            <a href="incomingTalent.html" class="collapse-font">全球人才實習</a> </div>
                     </div>
                     <li class="nav-item dropdown">
-                        <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                        <a class="nav-link js-scroll-trigger" href="%E5%8A%A0%E5%85%A5%E6%88%91%E5%80%91.html" sytle="color=white">加入我們·秋季徵才</a>
                     </li>
 
                     <li class="nav-item dropdown">
