--- a/oge_info_session_form.html
+++ b/oge_info_session_form.html
@@ -17,9 +17,9 @@
 <body>
     <div class="row mt-5">
         <div class="container">
-                                    <div class="text-center">
-                        <h3 class="m-3">報名海外青創說明會</h3>
-                        </div>
+            <div class="text-center">
+                <h3 class="m-3">報名海外青創說明會</h3>
+            </div>
             <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" name="gip_form">
                 <table class="table table-borderless fixed">
                     <!--      中文名子、姓名-->
@@ -296,14 +296,14 @@
 
                 </table>
                 <div class="container">
-                    <input type="submit" id="submit_button" name="submit" clicked="false" class="send btn btn-primary btn-recruit center mt-5" value="報名說明會" src="thanksPage.html">
+                    <input type="submit" id="submit_button" name="submit" clicked="false" class="send btn btn-primary btn-recruit center mt-5" value="報名說明會">
                 </div>
-                
+
 
                 <!--    hidden value-->
 
                 <input name="oid" type="hidden" value="00D70000000IhvY" />
-                <!--                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/%E5%80%8B%E4%BA%BA%E5%8F%83%E8%88%87%E5%B0%88%E6%A1%88/%E6%B5%B7%E5%A4%96%E9%9D%92%E5%89%B5/%E6%B5%B7%E5%A4%96%E9%9D%92%E5%89%B5-%E5%AE%8C%E6%88%90%E5%A0%B1%E5%90%8D/" />-->
+                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/thanksPage.html" />
                 <input name="rating" type="hidden" value="Warm" />
                 <input name="00N70000002UFkn" type="hidden" value="OGE" />
 
@@ -337,6 +337,9 @@
             });
 
         });
+
     </script>
 
-</body></html>
+</body>
+
+</html>
