--- a/oge_regist_form.html
+++ b/oge_regist_form.html
@@ -357,7 +357,7 @@
                     </tr>
                     <tr>
                         <td colspan="2" align="center">
-                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外青創報名表" src="thanksPage.html">
+                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外青創報名表">
                         </td>
                     </tr>
 
@@ -365,7 +365,8 @@
 
                 </table>
                 <!-- hidden values -->
-                <!--                <input type="hidden" name="website_url" value="{website_url}">-->
+                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/thanksPage.html" />
+
                 <input name="rating" type="hidden" value="Warm">
                 <input name="00N70000002UFkn" type="hidden" value="OGX GIP">
                 <input name="00N70000002ULec" type="hidden" value="1">
@@ -374,6 +375,4 @@
             </form>
         </div>
     </div>
-</body>
-
-</html>
+</body></html>
