--- a/ogv_info_session_form.html
+++ b/ogv_info_session_form.html
@@ -16,9 +16,9 @@
 <body>
     <div class="row mt-5">
         <div class="container">
-                         <div class="text-center">
-                        <h3 class="m-3">報名海外成長說明會</h3>
-                        </div>
+            <div class="text-center">
+                <h3 class="m-3">報名海外成長說明會</h3>
+            </div>
             <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" name="gcdp_form">
                 <table class="table table-borderless fixed">
                     <!--      中文名子、姓名-->
@@ -295,12 +295,13 @@
 
                 </table>
                 <div class="container">
-                    <input type="submit" id="submit_button" name="submit" clicked="false" class="send btn btn-primary btn-recruit center mt-5" value="報名說明會" src="thanksPage.html">
+                    <input type="submit" id="submit_button" name="submit" clicked="false" class="send btn btn-primary btn-recruit center mt-5" value="報名說明會">
                 </div>
 
                 <!--                hidden value-->
                 <input name="oid" type="hidden" value="00D70000000IhvY" />
-                <!--                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/%E5%80%8B%E4%BA%BA%E5%8F%83%E8%88%87%E5%B0%88%E6%A1%88/%E6%B5%B7%E5%A4%96%E6%88%90%E9%95%B7/%E6%B5%B7%E5%A4%96%E6%88%90%E9%95%B7-%E5%AE%8C%E6%88%90%E5%A0%B1%E5%90%8D/" />-->
+                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/thanksPage.html" />
+
                 <input name="rating" type="hidden" value="Warm" />
                 <input name="00N70000002UFkn" type="hidden" value="OGX GCDP" />
 
@@ -333,7 +334,6 @@
             });
 
         });
-
     </script>
     <script>
         jQuery.get("https://auth.aiesec.org.tw/?entry=market", function(data) {
@@ -350,8 +350,5 @@
             });
 
         });
-
     </script>
-</body>
-
-</html>
+</body></html>
