--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-WNBV7M3');
+
+    </script>
+    <!-- End Google Tag Manager -->
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -40,6 +59,9 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/airtable@0.6.0/lib/airtable.min.js'></script>
 
+    <!--    google ads-->
+    <script data-ad-client="ca-pub-9879598267805942" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 
 </head>
 <div id="overlay">
@@ -47,6 +69,9 @@
 </div>
 
 <body id="page-top">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNBV7M3" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -100,17 +125,23 @@
             </div>
         </div>
     </nav>
-    <header class="masthead">
-
-        <h1 align=center class="text-uppercase animated zoomIn header-font" style="animation-duration: 1s;">
+    <header class="masthead" style="background-image: url(img/winter.jpg);">
+        <h1 align=center class="text-uppercase animated zoomIn header-font-home" style="animation-duration: 1s;">
             <br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile">
             <strong id="title_head">
                 <!--                            青年創造影響力的起點 -->
             </strong>
-            <p align="center " id="info_head" style="animation-duration: 1s; animation-delay: 1.5s;animation-delay: .5s" class="animated fadeInDown mobile">
-                <!--  我們相信一個人微小的行動能夠影響一件事情，<br>而一群人就能夠改變台灣、改變世界。-->
-                <br><br>
-            </p>
+            <strong class="header-font_1">
+                <p align="center " id="info_head" style="animation-duration: 1s; animation-delay: 1.5s;animation-delay: .5s;color: #383838;
+    font-family: Microsoft JhengHei;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 2px;" class="animated fadeInDown mobile header-font_1">
+                    <!--  我們相信一個人微小的行動能夠影響一件事情，<br>而一群人就能夠改變台灣、改變世界。-->
+                    <br><br>
+                </p>
+            </strong>
         </h1>
         <br>
 
@@ -190,10 +221,179 @@
     </section>
 
 
+    <!--    立即報名-->
+    <section style="background-color: #e6e6e6">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.5s">報名開始您的旅程</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/apply_flow_02.png" class="fas fa-4x text-primary mb-3 ogv_applyimg" style="width: 50%; height: 50%">
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3">立即報名海外成長</h3>
+                        <hr class="gray">
+                        <a class="js-scroll-trigger" href="#apply">
+                            <buttom class="btn btn-primary">報名海外成長</buttom>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/apply_flow_01.png" class="fas fa-4x text-primary mb-3 ogv_applyimg" style="width: 50%; height: 50%">
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3">報名校園說明會</h3>
+                        <hr class="gray">
+                        <a href="ogv_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=650px,height=700px,toolbar=1,resizable=0'); return false;">
+                            <buttom class="btn btn-primary">報名海外成長說明會</buttom>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 可以從海外成長獲得什麼-->
+    <section id="services" class="section-whbacolor why-choose-text">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p class="section-heading wow fadeInDown section-title">您可以獲得什麼</p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="wow fadeInDown" data-wow-duration="1.2s" data-wow-offset="50">
+            <p style="text-align: center" class="container sdg-font">海外成長計畫目的是讓所有認同AIESEC價值的青年能夠採取行動</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/why_ogv_01.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                    </div>
+                    <div class="service-box mt-5 mx-auto">
+                        <h3 class="mb-3">體驗不同文化</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text">深度體驗當地文化，發覺異國文化相異處，開啟與世界的對話。</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/why_ogv_02.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                    </div>
+                    <div class="service-box mt-5 mx-auto">
+
+                        <h3 class="mb-3">創造您的影響力</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text">透過和各國青年共同完成專案，踏出影響世界的第一步。</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/why_ogv_03.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                    </div>
+                    <div class="service-box mt-5 mx-auto">
+                        <h3 class="mb-3">踏出舒適圈</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text">認識來自世界各地的青年，探索自我價值，進而更認識自己。</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/why_ogv_04.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                    </div>
+                    <div class="service-box mt-5 mx-auto">
+                        <h3 class="mb-3">國際志工證書</h3>
+                        <hr class="gray">
+                        <div class="text-muted mb-0 line-height-35 section-text">完成回饋問卷，我們會在歸國研習生會議上頒發國際志工證書。</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- AIESEC所提供的-->
+    <section id="prepare" class="section-grbacolor" style="background-color: #e6e6e6">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.5s">我們為您準備好的</p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="wow fadeInDown" style="animation-duration: 1.5s">
+            <p style="text-align: center" class="container sdg-font">我們的團隊將確保所有參與專案的青年有最好的支援。</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/Safe-Living-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3">安全的生活條件</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text">您將在辦理保險後收到有關住宿和基本生活開銷的資訊。</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/Learning-Experience-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+
+                        <h3 class="mb-3">良好的學習環境</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text">設定明確的目標,讓您了解當地文化，在專案之前提供訓練課程。</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/Clear-JD.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3">清楚的工作說明</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text">我們將陪同您到專案地點，確保您的專案與合約上的條件描述一致。</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/Logistic-Support.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3">實質上的幫助</h3>
+                        <hr class="gray">
+                        <div class="text-muted mb-0 line-height-35 section-text">在您出發參與專案之前，我們確保您辦理正確的簽證及接送機資訊。</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="text-center section-whbacolor">
+        <div class="col-lg-12 text-center">
+            <br><br>
+            <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.3s">如何參與專案</p>
+        </div>
+        <div class="wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.7s">
+            <img src="img/process2.png" class="howto mb-5" style="width: 60%; height: 60%">
+        </div>
+    </div>
+
     <section id="project">
 
         <div class="container">
-            <h2 class="section-title" align="center">您可選擇的專案</h2>
+            <h2 class="section-title" align="center">您可選擇的所有專案</h2>
             <br>
             <div class="row">
 
@@ -268,6 +468,7 @@
     </section>
 
 
+    <!--
     <section id="services" class="section-whbacolor why-choose-text">
         <div class="container">
             <div class="row">
@@ -316,6 +517,7 @@
             </div>
         </div>
     </section>
+-->
     <!-- 最新消息 -->
     <!--
     <div class="container-news">
@@ -435,7 +637,7 @@
                 ·
                 <a href="outgoingTalent.html">海外實習</a>
                 ·
-                <a href="outgoingEntrepreneur.html">海外青創</a> 
+                <a href="outgoingEntrepreneur.html">海外青創</a>
                 ·
                 <a href="incomingVolunteer.html">全球青年在地發展</a>
                 ·
@@ -501,6 +703,7 @@
     <script src="js/creative.min.js"></script>
     <script>
         new WOW().init();
+
     </script>
     <script>
         var Airtable = require('airtable');
@@ -520,11 +723,12 @@
                 `<a class="header-font">${record.fields.data_title}</a>`
             );
             $('#info_head').append(
-                `<a class="info-font">${record.fields.data_info}</a>`
+                `<p class="info-font">${record.fields.data_info}</p>`
             );
         });
 
         var TEST = '123';
+
     </script>
     <script>
         jQuery.get("https://auth.aiesec.org.tw/?entry=campaignInfos&type=glp", function(data) {
@@ -533,5 +737,8 @@
 
             var data;
         });
+
     </script>
-</body></html>
+</body>
+
+</html>
