1018 upadate index header

--- a/index.html
+++ b/index.html
@@ -125,19 +125,14 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image: url(img/winter.jpg);">
+    <header class="masthead">
+       <a><br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile"></a>
         <h1 align=center class="text-uppercase animated zoomIn header-font-home" style="animation-duration: 1s;">
-            <br class="mobile"><br class="mobile"><br class="mobile"><br class="mobile">
             <strong id="title_head">
                 <!--                            青年創造影響力的起點 -->
             </strong>
             <strong class="header-font_1">
-                <p align="center " id="info_head" style="animation-duration: 1s; animation-delay: 1.5s;animation-delay: .5s;color: #383838;
-    font-family: Microsoft JhengHei;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 36px;
-    letter-spacing: 2px;" class="animated fadeInDown mobile header-font_1">
+                <p align="center " id="info_head" class="animated fadeInDown mobile header-font_1">
                     <!--  我們相信一個人微小的行動能夠影響一件事情，<br>而一群人就能夠改變台灣、改變世界。-->
                     <br><br>
                 </p>
